# FFMpegTest

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/org/lampoo/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  demuxing_decoding.c  native-lib.c
app/src/main/java/org/lampoo/ffmpeg/: MainActivity.java
app/src/test/java/org/lampoo/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
